[gd_scene load_steps=3 format=3 uid="uid://d07bnoyigxpbx"]

[ext_resource type="Script" path="res://scripts/post_game_screen.gd" id="1_gidhc"]
[ext_resource type="PackedScene" uid="uid://vnrmxmt6hkgk" path="res://scenes/score_board.tscn" id="2_vi7rf"]

[node name="post_game_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gidhc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 459.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 72
text = "Fin de partie"

[node name="endReason" type="Label" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 142.0
offset_right = 614.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 32
text = "test"
autowrap_mode = 2

[node name="ScoreBoard" parent="." instance=ExtResource("2_vi7rf")]
layout_mode = 1
offset_left = 417.0
offset_top = 402.0
offset_right = -344.0
offset_bottom = 204.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 972.0
offset_top = 583.0
offset_right = 1106.0
offset_bottom = 614.0
text = "Retour au menu"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
